--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ a{
 }
 header{
     background-color: #fff;
-    position: fixed;
+    position: sticky;
     width: 100%;
     height: 80px;
     padding: 0 95px;
@@ -27,11 +27,25 @@ nav ul{
     width: 500px;
 }
 .container{
-    background-image: url(/img/banner.svg);
-    background-repeat: no-repeat;
-    background-size: cover;
     width: 100%;
     height: 650px;
-    object-fit: fill;
+    text-align: center;
+    position: relative;
     display: block;
+    color: #fff;
+}
+.container img{
+  width: 100%;
+}
+.text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%);
+}
+.text h3 {
+    font-size: 78px;
+}
+.text h6 { 
+    font-size: 18px;
 }
