--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ a{
 }
 header{
     background-color: #fff;
-    position: sticky;
+    position: fixed;
     width: 100%;
     height: 80px;
     padding: 0 95px;
@@ -19,6 +19,7 @@ header{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    z-index: 10;
 }
 nav ul{
     display: flex;
@@ -36,16 +37,72 @@ nav ul{
 }
 .container img{
   width: 100%;
+  height: 650px;
+  object-fit: cover;
 }
 .text {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%);
+    
 }
 .text h3 {
     font-size: 78px;
 }
 .text h6 { 
+    margin-top: 34px;
     font-size: 18px;
+}
+.container2{
+    padding: 73px 95px;
+    display: flex;
+    flex-direction: row;
+}
+.discover{
+    width: 241px;
+    height: 243px;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    margin-left: 60px;
+}
+.discover p{
+    font-size: 16px;
+    color: #8D8D8D;
+}
+.discover h2{
+    font-size: 26px;
+    margin-bottom: 40px;
+}
+.boxes{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.box {
+    width: 275px;
+    height: 326px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.box p{
+    font-size: 16px;
+    color: #8D8D8D;
+}
+.box h4{
+    font-size: 24px;
+}
+.box1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 50%;
+}
+.box2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 50%;
 }
